[package]

name = "getopts"
version = "0.2.17"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang/getopts"
documentation = "https://doc.rust-lang.org/getopts"
homepage = "https://github.com/rust-lang/getopts"
description = """
getopts-like option parsing.
"""
categories = ["command-line-interface"]

[dev-dependencies]
log = "0.4"
unicode-width = "0.1.5"
